part3/3_9/manifests/service-main.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: main-application
  name: main-app-svc
spec:
  type: NodePort
  selector:
    app: main-app
  ports:
    - name: main-app
      port: 2345
      protocol: TCP
      targetPort: 3000
