part3/3_9/manifests/service-pingpong.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: main-application
  name: pingpong
spec:
  type: NodePort
  selector:
    app: pingpong
  ports:
    - name: pingpong
      port: 3001
      protocol: TCP
      targetPort: 3001
