part3/3_9/manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: main-application-ing
  namespace: main-application
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: main-app-svc
          servicePort: 2345
      - path: /pingpong
        backend:
          serviceName: pingpong
          servicePort: 3001
